[package]
name = "scylladb_poc"
version = "0.1.0"
authors = ["amita <amita.yadav@knoldus.in>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"

cdrs_helpers_derive = '*'
cdrs = "2.0.0-beta.3"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

listenfd = "0.3"
failure = "0.1.2"
env_logger = "0.5.12"