[package]
name = "item_service"
version = "0.1.0"
authors = ["amita <amita.yadav@knoldus.in>"]
edition = "2018"

[dependencies]
listenfd = "0.3"
failure = "0.1.2"
env_logger = "0.5.12"

serde ="1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"

actix ="0.7.9"
actix-web = "0.7.17"
item = {path ="../item_service/item"}