[package]
name = "user_service"
version = "0.1.0"
authors = ["rsb007 <rahul.sing@knoldus.in>"]
edition = "2018"

[dependencies]
listenfd = "0.3"
env_logger = "0.5.12"
log = "0.4.6"

actix ="0.7.9"
actix-web = "0.7.17"
serde_json = "1.0.33"

config = "0.9.2"
lazy_static = "1.2.0"
user = {path ="../user_service/user"}
cdrs = "2.0.0-beta.4"
cdrs_helpers_derive = "0.2.0"
time = "0.1.42"