[package]
name = "user_service"
version = "0.1.0"
authors = ["rsb007 <rahul.sing@knoldus.in>"]
edition = "2018"

[dependencies]
listenfd = "0.3"
env_logger = "0.5.12"
log = "0.4.6"
actix ="0.7.9"
actix-web = "0.7.17"
config = "0.9.2"
lazy_static = "1.2.0"
cdrs = "2.0.0-beta.4"
cdrs_helpers_derive = "0.2.0"
eventsourcing-derive = "0.1.1"
eventsourcing = "0.1.1"
serde ="1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
failure = "0.1.2"
futures = "0.1.25"
validator = "0.8.0"
validator_derive = "0.8.0"
uuid = { version = "0.7", features = ["v5"] }
time = "0.1.42"