[package]
name = "user"
version = "0.1.0"
authors = ["amita <amita.yadav@knoldus.in>"]
edition = "2018"

[dependencies]
cdrs = "2.0.0-beta.4"
cdrs_helpers_derive = "0.2.0"

eventsourcing-derive = "0.1.1"
eventsourcing = "0.1.1"

serde ="1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"

actix ="0.7.9"
actix-web = "0.7.17"
failure = "0.1.2"
futures = "0.1.25"
fixture = "0.3.1"

config = "0.9.2"
uuid = { version = "0.7", features = ["v5"] }

[lib]
doc = true